2005-12-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2005-12-11  Aaron Bockover  <aaron@aaronbock.net>

	* POTFILES.in: Added missing files
	* nb.po: Updated Øivind Hoel's Norwegian Bokmål translation 

2005-12-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2005-12-09  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Rostislav Raykov <zbrox@i-space.org>

2005-12-06  Aaron Bockover  <aaron@aaronbock.net>

	* POTFILES.in: Removed obsolete files, added new files

2005-12-05  Funda Wang  <fundawang@linux.net.cn>

	* POTFILES.in: Removed obsolete files.

2005-12-04  Aaron Bockover  <aaron@aaronbock.net>

	* POTFILES.in: added src/Banshee.Base/ImportManager.cs
	* fr.po: Added French translation by Stephane Raimbault 
	<stephane.raimbault@free.fr>

2005-12-03  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-12-03  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Rostislav Raykov <zbrox@i-space.org>

2005-12-01  Aaron Bockover  <aaron@aaronbock.net>

	* POTFILES.in: Updated files
	* da.po: Added Danish translation by Lasse Bang Mikkelsen

2005-11-26  Aaron Bockover  <aaron@aaronbock.net>

	* POTFILES.in: Added libbanshee/hal-context.c, src/Banshee.Base/HalCore.cs

2005-11-26  Aaron Bockover  <aaron@aaronbock.net>

	* POTFILES.in: Added missing files

2005-11-25  Aaron Bockover  <aaron@aaronbock.net>

	* POTFILES.in: Updated with new files and namespace layout

2005-11-25  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-11-25  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translatio (QA: Team)

2005-11-24  Funda Wang  <fundawang@linux.net.cn>

	* zh_CN.po: Updated Simplified Chinese translation.

2005-11-22  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
