@@ -3,10 +3,7 @@
 [encoding: UTF-8]
 data/banshee.desktop.in.in
 data/banshee.schemas.in
-data/glade/newipod.glade
-data/glade/player.glade
-data/glade/preferences.glade
-data/glade/trackinfo.glade
+data/banshee.glade
 libbanshee/gst-cd-rip-0.8.c
 libbanshee/gst-playback-0.8.c
 libbanshee/gst-transcode-0.8.c
@@ -33,6 +30,7 @@ src/ToggleStates.cs
 src/TrackInfoHeader.cs
 src/TrackProperties.cs
 src/VersionInformationDialog.cs
+src/Banshee.Base/ActionManager.cs
 src/Banshee.Base/FileEncodeAction.cs
 src/Banshee.Base/GstFileEncoder.cs
 src/Banshee.Base/HalCore.cs
